# condorgmm

./: .gitignore  .pre-commit-config.yaml  README.md  parselmouth.json  pyproject.toml  pyrightconfig.json
.github/workflows/: python_format.yml  script_format.yml  tests.yml  yaml_format.yml
notebooks/: c2f_visual.ipynb  inference_analysis_starter.ipynb
notebooks/condor/clean/: frame0_final_state.ipynb  frame0_inference_sequence.ipynb  fullrun_rigid_with_gt_pose.ipynb  nearfar.ipynb  red-blanket.ipynb  variance_priors.ipynb
notebooks/condor/tmp/: ffds.ipynb  frame0.ipynb  frame0_inference_sequence.ipynb  object_init.ipynb  object_tracking.ipynb  object_tracking_debug.ipynb  objmodel.ipynb  pose_alignment.ipynb  sim.ipynb  sim_step.ipynb  step.ipynb  step_inference_sequence.ipynb  tmp.ipynb
notebooks/deformable/: debug_quaternion_gradients.ipynb  deformable_object_starter.ipynb
notebooks/figures/: gaussian_splatting_visuals.ipynb  multiresolution.py  multiresolution_plot.py  scene_graph.py  scene_graph_figure_generation.py  schematic_panels.ipynb
notebooks/figures/tmp/: multiresolution.ipynb
notebooks/gm/: depthanything.ipynb  figure-making.ipynb  tum.ipynb
notebooks/kc/: pose_grid.ipynb
notebooks/ng/: low_frame_rate.ipynb  scannet.ipynb
notebooks/quant_eval/: run_camera_pose_tracking.py  run_gsplat_multires_visuals.py  run_object_pose_tracking.py  run_runtime_accuracy.py  run_runtime_accuracy_gsplat.py
notebooks/quant_eval/figure_generation/: generate_em_replica_pose_tracking_table.py  generate_gsplat_multires.py  generate_low_frame_rate_metrics.py  generated_ycbv_accuracy_table.py.py  se3_results_part2.ipynb
notebooks/thesis_figures/: condorgmm.ipynb  intro.ipynb
scripts/: common.sh  compare.sh  compile_latex.sh  download-scannet.py  download_replica.sh  download_tum.sh  download_ycbineoat.sh  download_ycbv.sh  download_ycbv_train.sh  em_camera_pose_tracking_replica.py  eval.sh  install.sh  pull_bucket.sh  push_bucket.sh  storage.sh  tensorboard.sh  test_gsplat.py  vm.sh
scripts/ScanNet/SensReader/python/: SensorData.py  reader.py
scripts/bucket_utils/: bucket_constants.py  pull.py  push.py
src/condorgmm/: __init__.py
src/condorgmm/camera_tracking/: em_camera_tracking.py  integrated_camera_tracking.py
src/condorgmm/condor/: config.py  geometry.py  pose.py  rerun.py  tiling.py  utils.py
src/condorgmm/condor/inference/: conjugate_updates.py  depth_inference.py  instrumentation.py  shared.py
src/condorgmm/condor/interface/: camera_tracking.py  object_tracking.py  shared.py
src/condorgmm/condor/model/: model.py
src/condorgmm/condor/types/: __init__.py  camera.py  condorgmm_types.py  discrete_floats.py
src/condorgmm/data/: __init__.py  base_dataloading.py  frame.py  mp4_vda.py  r3d_dataloader.py  replica_dataloader.py  scannet_dataloader.py  tum_dataloader.py  ycb_dataloader.py  ycbineoat_dataloader.py
src/condorgmm/data/scannet_preprocessing/: SensorData.py  (+1 more)
src/condorgmm/eval/: aggregate_metrics.py  fp_loader.py  metrics.py
src/condorgmm/ng/: torch_utils.py
src/condorgmm/object_tracking/: em_object_tracking.py  integrated_object_tracking.py  low_frame_rate.py
src/condorgmm/utils/: __init__.py
src/condorgmm/warp_gmm/: __init__.py  adam.py  enumeration_kernels.py  gmm_warp.py  kernels.py  optimize.py  sgld.py  state.py  utils.py  warp_gmm_sample.py
tests/: test_camera_tracking.py
tests/common/: test_gmm.py  test_mesh.py  test_pose.py
tests/condor/: README.md
tests/condor/standard/: test_geometry.py  test_tiling.py  test_utils.py
tests/data/: test_dataloaders.py
tests/eval/: test_fp_loader.py  test_metrics.py
tests/scripts/: runner.sh  test-storage.sh
tests/warp_gmm/: test_optimize.py  test_warp_gmm_EM.py  test_warp_gmm_forward.py  test_warp_gmm_grad.py
(+23 files in other folders)
